.k8s/app-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: languages-app-api-deployment
  labels:
    app: languages-app
    role: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: languages-app-api
  template:
    metadata:
      labels:
        app: languages-app-api
    spec:
      containers:
        - name: app
          image: mapeveri/languages:latest
          volumeMounts:
            - name: languages-secret-volume
              mountPath: /etc/languages/secret
              readOnly: true
          ports:
            - containerPort: 4000
      restartPolicy: Always
      volumes:
        - name: languages-secret-volume
          secret:
            secretName: languages-app-secret
        - name: app-storage
          persistentVolumeClaim:
            claimName: languages-app-pvc
