.k8s/app-consumer-events-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: languages-app-consumer-events-deployment
  labels:
    app: languages-app
    role: consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: languages-app-consumer-events
  template:
    metadata:
      labels:
        app: languages-app-consumer-events
    spec:
      containers:
        - name: app-consume-events-deployment
          image: mapeveri/languages:latest
          command: ['npm', 'run', 'consumer:domain-events']
          ports:
            - containerPort: 4001
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 4001
            initialDelaySeconds: 5
            periodSeconds: 10
      restartPolicy: Always
