.k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: languages-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: languages
  template:
    metadata:
      labels:
        app: languages
    spec:
      containers:
        - name: app
          image: mapeveri/languages:latest
          volumeMounts:
            - name: secret-volume
              mountPath: /etc/languages/secret
              readOnly: true
          ports:
            - containerPort: 4000
      volumes:
        - name: secret-volume
          secret:
            secretName: languages-secret
        - name: app-storage
          persistentVolumeClaim:
            claimName: app-pvc
