.k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: db
    spec:
      containers:
        - env:
            - name: PGDATA
              value: /var/lib/postgresql/data/pgdata
            - name: POSTGRES_DB
              valueFrom:
                secretKeyRef:
                  name: languages-secret
                  key: POSTGRES_DATABASE
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: languages-secret
                  key: POSTGRES_PASSWORD
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  name: languages-secret
                  key: POSTGRES_USER
          image: postgres
          name: db
          ports:
            - containerPort: 5432
              hostPort: 5435
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data/pgdata
              name: db-claim0
      restartPolicy: Always
      volumes:
        - name: secret-volume
          secret:
            secretName: languages-secret
        - name: db-claim0
          persistentVolumeClaim:
            claimName: db-claim0
status: {}
