.k8s/mongo1-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  creationTimestamp: null
  labels:
    name: mongo1-statefulset
    role: database
  name: mongo1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo1
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mongo1
    spec:
      containers:
        - name: mongo1
          image: mongo:6
          command: ["mongod", "--bind_ip_all", "--replSet", "rs0"]
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo1-claim0
              mountPath: /data/db
      volumes:
        - name: mongo1-claim0
          persistentVolumeClaim:
            claimName: mongo1-claim0
  strategy: {}
