.k8s/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    name: rabbitmq-deployment
    role: message-broker
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      name: rabbitmq
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: rabbitmq
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: languages-app-config-map
            - secretRef:
                name: languages-app-secret
          image: rabbitmq:3.12-management
          name: rabbitmq
          ports:
            - containerPort: 5672
              hostPort: 5630
              protocol: TCP
            - containerPort: 15672
              hostPort: 8090
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
