.k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: languages-app-service
  labels:
    app: languages-app
    role: backend
spec:
  selector:
    app: languages-app-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
  type: NodePort
