.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: languages-svc
spec:
  selector:
    app: languages
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: NodePort
